crates/review-buddy/tests/snapshots/frames__frame_1d_diff_no_color_100x30.snap
---
source: crates/review-buddy/tests/frames.rs
expression: plain_dump(& mut app)
---
 review buddy  ·  demo · 4 sources · 7 changes                                           Liminal HQ
╭ files 3 ───────────────────────╮╭ src/ui/menus.rs ───────────────────────────────────────────────╮
│› · src/ui/menus.rs       +22 −1││    12   12       items: Vec<MenuItem>,                         │
│  · src/ui/menubar.rs      +8 −0││         13 +     selected: usize,                              │
│  · src/ui/mod.rs          +2 −0││         14 +     open: bool,                                   │
│                                ││    13   15   }                                                 │
│                                ││    14   16                                                     │
│                                ││    15   17   impl Menu {                                       │
│                                ││    16   18       pub fn new(items: Vec<MenuItem>) -> Self {    │
│                                ││              @@ -34,6 +36,24 @@ impl Menu {                    │
│                                ││    34   36       pub fn len(&self) -> usize {                  │
│                                ││    35   37           self.items.len()                          │
│                                ││    36   38       }                                             │
│                                ││         39 +                                                   │
│                                ││         40 +     pub fn select_next(&mut self) {               │
│                                ││         41 +         if self.items.is_empty() {                │
│                                ││         42 +             return;                               │
│                                ││         43 +         }                                         │
│                                ││›        44 +         self.selected = (self.selected + 1) % sel…│
│                                ││              ╭─ thread · line 44 ─────────────────────────────╮│
│                                ││              │ jo · 1d                                        ││
│                                ││              │ Should this wrap round to the first item? Most ││
│ Your review · pending ─────────││              │ menus I use stop at the end.                   ││
│1 suggestion · 0 comments       ││              │ ada · 20h                                      ││
│0 of 3 files viewed             ││              │ I went with wrapping so a held key never gets  ││
│Your verdict: not started       ││              │ stuck. Happy to make it configurable if you'd  ││
│a approve · c comment           ││              │ rather.                                        ││
│x request changes               ││              ╰────────────────────────────────────────────────╯│
╰────────────────────────────────╯╰ hunk 2 of 3 · file 1 of 3 ─────────────────────────────────────╯
 j/k move  n/p hunk  ]/[ file  tab pane  c comment  a approve  o open  y copy  esc back  ? help

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  demo · 4 sources · 7 changes"
0:88 D " Liminal HQ"
1:0 D "╭ files 3 ───────────────────────╮"
1:34 B "╭ src/ui/menus.rs ───────────────────────────────────────────────╮"
2:0 D "│"
2:1 B "›"
2:3 D "·"
2:5 B "src/ui/menus.rs"
2:30 B " −1"
2:33 D "│"
2:34 B "│"
2:37 D "  12   12"
2:99 B "│"
3:0 D "│"
3:1 B ""
3:3 D "·"
3:30 B " −0"
3:33 D "│"
3:34 B "│"
3:37 D "       13"
3:99 B "│"
4:0 D "│"
4:1 B ""
4:3 D "·"
4:30 B " −0"
4:33 D "│"
4:34 B "│"
4:37 D "       14"
4:99 B "│"
5:0 D "│"
5:33 D "│"
5:34 B "│"
5:37 D "  13   15"
5:99 B "│"
6:0 D "│"
6:33 D "│"
6:34 B "│"
6:37 D "  14   16"
6:99 B "│"
7:0 D "│"
7:33 D "│"
7:34 B "│"
7:37 D "  15   17"
7:99 B "│"
8:0 D "│"
8:33 D "│"
8:34 B "│"
8:37 D "  16   18"
8:99 B "│"
9:0 D "│"
9:33 D "│"
9:34 B "│"
9:99 B "│"
10:0 D "│"
10:33 D "│"
10:34 B "│"
10:37 D "  34   36"
10:99 B "│"
11:0 D "│"
11:33 D "│"
11:34 B "│"
11:37 D "  35   37"
11:99 B "│"
12:0 D "│"
12:33 D "│"
12:34 B "│"
12:37 D "  36   38"
12:99 B "│"
13:0 D "│"
13:33 D "│"
13:34 B "│"
13:37 D "       39"
13:99 B "│"
14:0 D "│"
14:33 D "│"
14:34 B "│"
14:37 D "       40"
14:99 B "│"
15:0 D "│"
15:33 D "│"
15:34 B "│"
15:37 D "       41"
15:99 B "│"
16:0 D "│"
16:33 D "│"
16:34 B "│"
16:37 D "       42"
16:99 B "│"
17:0 D "│"
17:33 D "│"
17:34 B "│"
17:37 D "       43"
17:99 B "│"
18:0 D "│"
18:33 D "│"
18:34 B "│"
18:35 BR "›"
18:37 DR "       44"
18:47 R "+         self.selected = (self.selected + 1) % sel…"
18:99 B "│"
19:0 D "│"
19:33 D "│"
19:34 B "│"
19:49 B "╭─ thread · line 44"
19:99 B "│"
20:0 D "│"
20:33 D "│"
20:34 B "│"
20:51 B "jo · 1d"
20:99 B "│"
21:0 D "│"
21:33 D "│"
21:34 B "│"
21:99 B "│"
22:0 D "│ Your review · pending ─────────│"
22:34 B "│"
22:99 B "│"
23:0 D "│"
23:33 D "│"
23:34 B "│"
23:51 B "ada · 20h"
23:99 B "│"
24:0 D "│"
24:33 D "│"
24:34 B "│"
24:99 B "│"
25:0 D "│"
25:33 D "│"
25:34 B "│"
25:99 B "│"
26:0 D "│a approve · c comment"
26:33 D "│"
26:34 B "│"
26:99 B "│"
27:0 D "│x request changes"
27:33 D "│"
27:34 B "│"
27:99 B "│"
28:0 D "╰────────────────────────────────╯"
28:34 B "╰"
28:35 BD " hunk 2 of 3 · file 1 of 3"
28:62 B "─────────────────────────────────────╯"
29:1 B "j/k"
29:4 D " move"
29:11 B "n/p"
29:14 D " hunk"
29:21 B "]/["
29:24 D " file"
29:31 B "tab"
29:34 D " pane"
29:41 B "c"
29:42 D " comment"
29:52 B "a"
29:53 D " approve"
29:63 B "o"
29:64 D " open"
29:71 B "y"
29:72 D " copy"
29:79 B "esc"
29:82 D " back"
29:89 B "?"
29:90 D " help"
