crates/review-buddy/tests/snapshots/frames__frame_1d_diff_no_color_160x40.snap
---
source: crates/review-buddy/tests/frames.rs
expression: plain_dump(& mut app)
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                       Liminal HQ
╭ files 3 ───────────────────────╮╭ src/ui/menus.rs ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│› · src/ui/menus.rs       +22 −1││              @@ -10,7 +10,9 @@ use crate::app::Action;                                                                     │
│  · src/ui/menubar.rs      +8 −0││    10   10                                                                                                                 │
│  · src/ui/mod.rs          +2 −0││    11   11   pub struct Menu {                                                                                             │
│                                ││    12   12       items: Vec<MenuItem>,                                                                                     │
│                                ││         13 +     selected: usize,                                                                                          │
│                                ││         14 +     open: bool,                                                                                               │
│                                ││    13   15   }                                                                                                             │
│                                ││    14   16                                                                                                                 │
│                                ││    15   17   impl Menu {                                                                                                   │
│                                ││    16   18       pub fn new(items: Vec<MenuItem>) -> Self {                                                                │
│                                ││              @@ -34,6 +36,24 @@ impl Menu {                                                                                │
│                                ││    34   36       pub fn len(&self) -> usize {                                                                              │
│                                ││    35   37           self.items.len()                                                                                      │
│                                ││    36   38       }                                                                                                         │
│                                ││         39 +                                                                                                               │
│                                ││         40 +     pub fn select_next(&mut self) {                                                                           │
│                                ││         41 +         if self.items.is_empty() {                                                                            │
│                                ││         42 +             return;                                                                                           │
│                                ││         43 +         }                                                                                                     │
│                                ││›        44 +         self.selected = (self.selected + 1) % self.items.len();                                               │
│                                ││              ╭─ thread · line 44 ─────────────────────────────────────────────────────────────────────────────────────────╮│
│                                ││              │ jo · 1d                                                                                                    ││
│                                ││              │ Should this wrap round to the first item? Most menus I use stop at the end.                                ││
│                                ││              │ ada · 20h                                                                                                  ││
│                                ││              │ I went with wrapping so a held key never gets stuck. Happy to make it configurable if you'd rather.        ││
│                                ││              ╰────────────────────────────────────────────────────────────────────────────────────────────────── r reply ─╯│
│                                ││         45 +     }                                                                                                         │
│                                ││         46 +                                                                                                               │
│                                ││         47 +     pub fn select_prev(&mut self) {                                                                           │
│                                ││         48 +         if self.items.is_empty() {                                                                            │
│ Your review · pending ─────────││         49 +             return;                                                                                           │
│1 suggestion · 0 comments       ││         50 +         }                                                                                                     │
│0 of 3 files viewed             ││         51 +         self.selected = self.selected.checked_sub(1).unwrap_or(self.items.len() - 1);                         │
│Your review: not started        ││              ╭─ pending suggestion · line 51 ─────────────────────────────────────────────────────────────────────────────╮│
│a approve · c comment           ││              │ Fewer branches this way:                                                                                   ││
│x request changes · R review    ││              │ -         self.selected = self.selected.checked_sub(1).unwrap_or(self.items.len() - 1);                    ││
╰────────────────────────────────╯╰ hunk 2 of 3 · file 1 of 3 ─────────────────────────────────────────────────────────────────────────────────────────────────╯
 j/k move  n/p hunk  ← → file  tab pane  c comment  r reply  a approve  R submit a review  o open  y copy  esc back  ? help  T theme

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  demo · 4 sources · 7 changes"
0:148 D " Liminal HQ"
1:0 D "╭ files 3 ───────────────────────╮"
1:34 B "╭ src/ui/menus.rs ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
2:0 D "│"
2:1 B "›"
2:3 D "·"
2:5 B "src/ui/menus.rs"
2:30 B " −1"
2:33 D "│"
2:34 B "│"
2:159 B "│"
3:0 D "│"
3:1 B ""
3:3 D "·"
3:30 B " −0"
3:33 D "│"
3:34 B "│"
3:37 D "  10   10"
3:159 B "│"
4:0 D "│"
4:1 B ""
4:3 D "·"
4:30 B " −0"
4:33 D "│"
4:34 B "│"
4:37 D "  11   11"
4:159 B "│"
5:0 D "│"
5:33 D "│"
5:34 B "│"
5:37 D "  12   12"
5:159 B "│"
6:0 D "│"
6:33 D "│"
6:34 B "│"
6:37 D "       13"
6:159 B "│"
7:0 D "│"
7:33 D "│"
7:34 B "│"
7:37 D "       14"
7:159 B "│"
8:0 D "│"
8:33 D "│"
8:34 B "│"
8:37 D "  13   15"
8:159 B "│"
9:0 D "│"
9:33 D "│"
9:34 B "│"
9:37 D "  14   16"
9:159 B "│"
10:0 D "│"
10:33 D "│"
10:34 B "│"
10:37 D "  15   17"
10:159 B "│"
11:0 D "│"
11:33 D "│"
11:34 B "│"
11:37 D "  16   18"
11:159 B "│"
12:0 D "│"
12:33 D "│"
12:34 B "│"
12:159 B "│"
13:0 D "│"
13:33 D "│"
13:34 B "│"
13:37 D "  34   36"
13:159 B "│"
14:0 D "│"
14:33 D "│"
14:34 B "│"
14:37 D "  35   37"
14:159 B "│"
15:0 D "│"
15:33 D "│"
15:34 B "│"
15:37 D "  36   38"
15:159 B "│"
16:0 D "│"
16:33 D "│"
16:34 B "│"
16:37 D "       39"
16:159 B "│"
17:0 D "│"
17:33 D "│"
17:34 B "│"
17:37 D "       40"
17:159 B "│"
18:0 D "│"
18:33 D "│"
18:34 B "│"
18:37 D "       41"
18:159 B "│"
19:0 D "│"
19:33 D "│"
19:34 B "│"
19:37 D "       42"
19:159 B "│"
20:0 D "│"
20:33 D "│"
20:34 B "│"
20:37 D "       43"
20:159 B "│"
21:0 D "│"
21:33 D "│"
21:34 B "│"
21:35 BR "›"
21:37 DR "       44"
21:47 R "+         self.selected = (self.selected + 1) % self.items.len();"
21:159 B "│"
22:0 D "│"
22:33 D "│"
22:34 B "│"
22:49 B "╭─ thread · line 44"
22:159 B "│"
23:0 D "│"
23:33 D "│"
23:34 B "│"
23:51 B "jo · 1d"
23:159 B "│"
24:0 D "│"
24:33 D "│"
24:34 B "│"
24:159 B "│"
25:0 D "│"
25:33 D "│"
25:34 B "│"
25:51 B "ada · 20h"
25:159 B "│"
26:0 D "│"
26:33 D "│"
26:34 B "│"
26:159 B "│"
27:0 D "│"
27:33 D "│"
27:34 B "│"
27:148 D " r reply"
27:159 B "│"
28:0 D "│"
28:33 D "│"
28:34 B "│"
28:37 D "       45"
28:159 B "│"
29:0 D "│"
29:33 D "│"
29:34 B "│"
29:37 D "       46"
29:159 B "│"
30:0 D "│"
30:33 D "│"
30:34 B "│"
30:37 D "       47"
30:159 B "│"
31:0 D "│"
31:33 D "│"
31:34 B "│"
31:37 D "       48"
31:159 B "│"
32:0 D "│ Your review · pending ─────────│"
32:34 B "│"
32:37 D "       49"
32:159 B "│"
33:0 D "│"
33:33 D "│"
33:34 B "│"
33:37 D "       50"
33:159 B "│"
34:0 D "│"
34:33 D "│"
34:34 B "│"
34:37 D "       51"
34:159 B "│"
35:0 D "│"
35:33 D "│"
35:34 B "│"
35:49 B "╭─ pending suggestion · line 51 ─────────────────────────────────────────────────────────────────────────────╮│"
36:0 D "│a approve · c comment"
36:33 D "│"
36:34 B "│"
36:49 B "│"
36:157 B " ││"
37:0 D "│x request changes · R review"
37:33 D "│"
37:34 B "│"
37:49 B "│ -         self.selected = self.selected.checked_sub(1).unwrap_or(self.items.len() - 1);"
37:157 B " ││"
38:0 D "╰────────────────────────────────╯"
38:34 B "╰"
38:35 BD " hunk 2 of 3 · file 1 of 3"
38:62 B "─────────────────────────────────────────────────────────────────────────────────────────────────╯"
39:1 B "j/k"
39:4 D " move"
39:11 B "n/p"
39:14 D " hunk"
39:21 B "← →"
39:24 D " file"
39:31 B "tab"
39:34 D " pane"
39:41 B "c"
39:42 D " comment"
39:52 B "r"
39:53 D " reply"
39:61 B "a"
39:62 D " approve"
39:72 B "R"
39:73 D " submit a review"
39:91 B "o"
39:92 D " open"
39:99 B "y"
39:100 D " copy"
39:107 B "esc"
39:110 D " back"
39:117 B "?"
39:118 D " help"
39:125 B "T"
39:126 D " theme"
