crates/review-buddy/tests/snapshots/frames__frame_1f_composer_dusk_160x40.snap
---
source: crates/review-buddy/tests/frames.rs
expression: text(& render(& mut app))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                             Dusk
╭ files 3 ───────────────────────╮╭ src/ui/menus.rs ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│› · src/ui/menus.rs       +22 −1││    14   16                                                                                                                 │
│  · src/ui/menubar.rs      +8 −0││    15   17   impl Menu {                                                                                                   │
│  · src/ui/mod.rs          +2 −0││    16   18       pub fn new(items: Vec<MenuItem>) -> Self {                                                                │
│                                ││              @@ -34,6 +36,24 @@ impl Menu {                                                                                │
│                                ││    34   36       pub fn len(&self) -> usize {                                                                              │
│                                ││    35   37           self.items.len()                                                                                      │
│                                ││    36   38       }                                                                                                         │
│                                ││         39 +                                                                                                               │
│                                ││         40 +     pub fn select_next(&mut self) {                                                                           │
│                                ││         41 +         if self.items.is_empty() {                                                                            │
│                                ││         42 +             return;                                                                                           │
│                                ││         43 +         }                                                                                                     │
│                                ││         44 +         self.selected = (self.selected + 1) % self.items.len();                                               │
│                                ││              ╭─ thread · line 44 ─────────────────────────────────────────────────────────────────────────────────────────╮│
│                                ││              │ jo · 1d                                                                                                    ││
│                                ││              │ Should this wrap round to the first item? Most menus I use stop at the end.                                ││
│                                ││              │ ada · 20h                                                                                                  ││
│                                ││              │ I went with wrapping so a held key never gets stuck. Happy to make it configurable if you'd rather.        ││
│                                ││              ╰────────────────────────────────────────────────────────────────────────────────────────────────── r reply ─╯│
│                                ││         45 +     }                                                                                                         │
│                                ││         46 +                                                                                                               │
│                                ││         47 +     pub fn select_prev(&mut self) {                                                                           │
│                                ││         48 +         if self.items.is_empty() {                                                                            │
│                                ││         49 +             return;                                                                                           │
│                                ││         50 +         }                                                                                                     │
│                                ││›        51 +         self.selected = self.selected.checked_sub(1).unwrap_or(self.items.len() - 1);                         │
│                                ││              ╭─ pending suggestion · line 51 ─────────────────────────────────────────────────────────────────────────────╮│
│                                ││              │ Fewer branches this way:                                                                                   ││
│                                ││              │ -         self.selected = self.selected.checked_sub(1).unwrap_or(self.items.len() - 1);                    ││
│                                ││              │ +         self.selected = (self.selected + self.items.len() - 1) % self.items.len();                       ││
│ Your review · pending ─────────││              ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│
│1 suggestion · 0 comments       ││╭ Comment · menus.rs line 51 ──────────────────────────────────────────────────────────────────────────────────────────────╮│
│0 of 3 files viewed             │││ Worth a guard here?                                                                                                      ││
│Your review: not started        │││                                                                                                                          ││
│a approve · c comment           │││                                                                                                                          ││
│x request changes · R review    ││╰ ⏎ add to review · ⌃⏎ post now · ⇧⏎ newline · esc discard ────────────────────────────────────────────────────────────────╯│
╰────────────────────────────────╯╰ hunk 2 of 3 · file 1 of 3 ─────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ add to review  ⌃⏎ post now  ⇧⏎ newline  esc discard
